# ksynth-rs

./: Cargo.toml  ClassicKAA.md  LICENSE  README.md  WizooIni.md  make_ranged.py
src/: lib.rs
src/k4/: A401.SYX  a401.in  a401effect32.in  a401multi1.in  a401single1.in  a403.in  amp.rs  bank.rs  drum.rs  effect.rs  filter.rs  intsingle.in  lfo.rs  mod.rs  multi.rs  single.rs  source.rs  sysex.rs  wave.rs
src/k5000/: WizooIni.in  WizooIni.syx  addkit.rs  amp.rs  control.rs  effect.rs  filter.rs  formant.rs  harmonic.rs  lfo.rs  mod.rs  morf.rs  multi.rs  osc.rs  pitch.rs  single.rs  source.rs  sysex.rs  wave.rs
