[package]
name = "ksynth"
version = "0.16.0"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/coniferprod/ksynth-rs"
description = """
Patch manipulation for Kawai digital synths
"""

[dependencies]
num_enum = "0.7.0"  # https://crates.io/crates/num_enum
bit = "0.1.1"  # https://crates.io/crates/bit
lazy_static = "1.4.0"  # https://crates.io/crates/lazy_static
log = "0.4.20"  # https://crates.io/crates/log
rand = "0.8.5"  # https://crates.io/crates/rand
syxpack = "0.14.0"  # https://crates.io/crates/syxpack
pretty-hex = "0.3.0"  # https://crates.io/crates/pretty-hex
nutype = "0.3.1" # https://crates.io/crates/nutype
